<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/fbc"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main_form" tools:context=".MainForm">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passL"
        android:textColor="@color/fbc"
        android:background="@color/ffc"
        android:height="40dp"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="none"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/imageButton"
        android:layout_toStartOf="@+id/imageButton"
        android:minHeight="35dp"
        android:editable="false"
        android:hint="Место свежего пароля"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:minHeight="40dp"
        android:src="@drawable/database_add"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/lPass"
        android:onClick="addToDB"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/lPass"
        android:maxLength="3"
        android:textColor="@color/fbc"
        android:background="@color/ffc"
        android:singleLine="true"
        android:width="45dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/passL"
        android:layout_toRightOf="@+id/textView"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:hint="4-100" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lgPass"
        android:id="@+id/textView"
        android:textColor="#000"
        android:layout_alignBottom="@+id/lPass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_below="@+id/lPass"
        android:paddingTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:background="@drawable/group_panel"
        android:id="@+id/linearLayout">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modeN"
            android:id="@+id/checkBox"
            android:textColor="#000"
            android:checked="true"
            android:onClick="onClickCB"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modeUC"
            android:id="@+id/checkBox2"
            android:textColor="@color/fbc"
            android:checked="true"
            android:onClick="onClickCB"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modeLC"
            android:id="@+id/checkBox3"
            android:textColor="@color/fbc"
            android:checked="true"
            android:onClick="onClickCB"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modeSC"
            android:id="@+id/checkBox4"
            android:textColor="#000"
            android:checked="false"
            android:onClick="onClickCB"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BReg"
        android:id="@+id/button"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:layout_alignRight="@+id/imageButton"
        android:layout_alignEnd="@+id/imageButton"
        android:textStyle="bold"
        android:background="@drawable/group_panel"
        android:textColor="@color/fbc"
        android:onClick="onClickGen"/>

</RelativeLayout>
